--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,4 +16,5 @@
     <servlet-name>default</servlet-name>
     <url-pattern>/fonts/*</url-pattern>
   </servlet-mapping>
+  <welcome-file-list> <welcome-file>Login</welcome-file></welcome-file-list>
 </web-app>
