Génération des fichiers avec telosys

--- a/telosys-tools.cfg
+++ b/telosys-tools.cfg
@@ -1,7 +1,7 @@
 #Telosys-Tools properties
-#Sun Oct 19 21:55:52 CEST 2014
+#Mon Oct 20 21:30:33 CEST 2014
 WEB=src/main/webapp
-ENTITY_PKG=org.demo.bean
+ENTITY_PKG=emn.tp.bean
 ProjectVariable.PROJECT_NAME=TP-EventManager
 ProjectVariable.MAVEN_ARTIFACT_ID=TP-EventManager
 TEST_SRC=src/test/java
@@ -9,7 +9,7 @@ RES=src/main/resources
 DOC=doc
 DownloadsFolder=TelosysTools/downloads
 TemplatesFolder=TelosysTools/templates
-ROOT_PKG=org.demo
+ROOT_PKG=emn.tp
 LibrariesFolder=TelosysTools/lib
 SRC=src/main/java
 RepositoriesFolder=TelosysTools
